add 更新系统架构